# aula-robotica-platform

./: .coverage  .gitignore  ARCHITECTURE.md  DATABASE_SCHEMA.md  README.md  README2.md  READMEnew.md  SECURITY_MODEL.md  create_participante.py  estructura.txt  pyproject.toml  sonar-project.properties
.github/workflows/: tests.yml
app/: main.py
app/api/: auth.py  deps.py  users.py
app/core/: authorization.py  config.py  render.py  roles.py  security.py  templates.py  utils.py
app/core/authorization/: permissions.py  policies.py  role_permissions.py  roles.py
app/core/constants/: actions.py  audit_actions.py  permisssions.py  resources.py  role_permissions.py
app/core/middleware/: auth_middleware.py
app/core/presentation/: breadcrumbs.py
app/core/services/: menu_service.py
app/core/utils/: audit_ui.py  validation.py
app/db/: base.py  init_db.py  models.py  session.py
app/models/: __init__.py  audit_log.py  identity.py  user.py
app/modules/activities/: activities_web.py  activity_model.py
app/modules/audit/: audit_model.py  audit_service.py
app/modules/auth/: auth_dependencies_api.py  auth_dependencies_web.py  auth_router.py  auth_schemas.py  auth_service.py
app/modules/auth_saml/: saml_config.py  saml_service.py  saml_web.py
app/modules/dashboard/: dashboard_service.py  dashboard_web.py
app/modules/identities/: identities_web.py  identity_model.py  identity_service.py
app/modules/projects/: project_model.py  projects_service.py  projects_web.py
app/modules/roles/: role_model.py  role_service.py  roles_web.py
app/modules/tasks/: task_model.py  tasks_web.py
app/modules/users/: user_model.py  user_role_model.py  user_router.py  user_schemas.py  user_service.py  user_view_service.py  users_web.py
app/schemas/: user.py
app/services/: audit_service.py  auth_service.py  user_service.py
app/static/css/: activities.css  (+13 more)
app/templates/: base.html
app/utils/: flash.py
app/web/: auth_web.py  context.py  dashboard_web.py  identities_web.py  roles_web.py  users_web.py
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT.md  RBAC_MODEL.md  ROADMAP.md  SECURITY_MODEL.md
scripts/: create_participante.py  init_db.py  seed_data.py  seed_db.py  test_orm.py
scripts/seed_db/: reset_db.py  seed_audit.py  seed_identities.py  seed_projects.py  seed_roles.py  seed_run.py  seed_users.py
tests/: conftest.py  test_audit_ui.py  test_auth.py  test_auth_dependencies_web_extra.py  test_auth_middleware.py  test_auth_middleware_extra.py  test_auth_middleware_refresh.py  test_auth_service.py  test_auth_web.py  test_auth_web_missing.py  test_identities_crud.py  test_identities_web_extra.py  test_menu_service.py  test_menu_service_extra.py  test_permissions.py  test_permissions_core.py  test_role_service.py  test_roles_crud.py  test_roles_web_extra.py  test_security.py  test_security_extra.py  test_user_service.py  test_user_service_extra.py  test_users_crud.py  test_users_web_extra.py  test_users_web_missing.py  test_utils.py  test_web_context.py  utils.py
(+60 files in other folders)
