[project]
name = "aula-robotica-platform"
version = "0.1.0"
description = "Plataforma educativa con FastAPI, RBAC, autenticación JWT y panel web"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.133.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "python3-saml>=1.16.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

# =====================================================
# PYTEST
# =====================================================
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --disable-warnings --maxfail=1"
filterwarnings = [
    "ignore::DeprecationWarning"
]

# =====================================================
# COVERAGE
# =====================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "scripts/*",
    "migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 0

# =====================================================
# RUFF
# =====================================================
[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".venv",
    "__pycache__",
    "migrations"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # imports
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplificaciones
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]